--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "firebase-element",
   "private": true,
   "dependencies": {
-    "polymer": "Polymer/polymer#master",
+    "polymer": "Polymer/polymer#>=0.3.0 <1.0.0",
     "firebase": "*"
   }
 }
