--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "polymer": "Polymer/polymer#master",
-    "firebase": "*"
+    "firebase": "*",
+    "firebase-simple-login"
   }
 }
