--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "firebase-element",
   "private": true,
   "dependencies": {
-    "polymer": "Polymer/polymer#master",
+    "polymer": "Polymer/polymer#^0.5.0",
     "firebase": "*"
-  }
+  },
+  "version": "0.5.1"
 }
